Fixed issue where hero text is not center aligned and bold when navigating to home from Nav menu

--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,7 @@ html {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    min-height: 100vh;
+    min-height: 100%;
     font-size: var(--text-font-size);
 }
 
@@ -26,13 +26,14 @@ html {
 }
 
 body {
+    height: 100%;
     font-family: 'Shantell Sans', cursive, sans-serif;
 }
 
 #content {
     display: grid;
     grid-template-rows: 1fr auto auto;
-    min-height: 100%;
+    min-height: 100vh;
     background-image: url(images/pho.jpg);
     background-size: cover;
     background-repeat: no-repeat;
